fix(errors): cleanup errors with wrong color

--- a/assets/styles/framework/typography.less
+++ b/assets/styles/framework/typography.less
@@ -70,7 +70,7 @@ h6 {
   &-color-flair {
     color: @flair-color;
   }
-  &-color-error {
+  &-color-danger {
     color: @red;
   }
   &-color-white {
