--- a/components/interactables/ContextMenu/ContextMenu.less
+++ b/components/interactables/ContextMenu/ContextMenu.less
@@ -30,7 +30,7 @@
       }
     }
     &.disabled {
-      opacity: 0.7;
+      opacity: 0.5;
       &:hover {
         background: none;
       }
